# MetroSimulation

./: .gitignore  CMakeLists.txt  DesignByContract.h  ErrorLog.txt  OperationLog.txt  README.md  Station.cpp  Station.h  Tram.cpp  Tram.h  main.cpp  metroNetSpecs.txt  metroNetSpecs2.txt  metroNetTestSpecs.txt  metronet.xml  temp.txt  tests.cpp
Documentation/: Doxyfile
Documentation/html/: AdvancedExport_8h_source.html  AlbatrosTram_8h_source.html  BigTram_8h_source.html  DesignByContract_8h_source.html  Exporter_8h_source.html  HalteStation_8h_source.html  InterfaceExport_8h_source.html  MetroNetGenerator_8h_source.html  MetroNet_8h_source.html  MetronetStation_8h_source.html  PCCTram_8h_source.html  ParseMetroNet_8h_source.html  ParseSpoor_8h_source.html  ParseStation_8h_source.html  ParseTram_8h_source.html  ParseXML_8h_source.html  Schema_8h_source.html  SimpleExport_8h_source.html  Spoor_8h_source.html  StadslijnerTram_8h_source.html  Station_8h_source.html  Tram_8h_source.html  annotated.html  classAdvancedExport-members.html  classAdvancedExport.html  classAlbatrosTram-members.html  classAlbatrosTram.html  classAttributeTypeCorrectness-members.html  classAttributeTypeCorrectness.html  classBigTram-members.html  classBigTram.html  classDomainTests-members.html  classDomainTests.html  classExporter-members.html  classExporter.html  classHalteStation-members.html  classHalteStation.html  classInterfaceExport-members.html  classInterfaceExport.html  classMetroNet-members.html  (+463 more)
Documentation/latex/: AdvancedExport_8h_source.tex  AlbatrosTram_8h_source.tex  DesignByContract_8h_source.tex  Exporter_8h_source.tex  HalteStation_8h_source.tex  InterfaceExport_8h_source.tex  MetroNetGenerator_8h_source.tex  MetroNet_8h_source.tex  MetronetStation_8h_source.tex  PCCTram_8h_source.tex  ParseMetroNet_8h_source.tex  ParseSpoor_8h_source.tex  ParseStation_8h_source.tex  ParseTram_8h_source.tex  ParseXML_8h_source.tex  Schema_8h_source.tex  SimpleExport_8h_source.tex  Spoor_8h_source.tex  StadslijnerTram_8h_source.tex  Station_8h_source.tex  Tram_8h_source.tex  annotated.tex  classAdvancedExport.eps  classAdvancedExport.tex  classAlbatrosTram.eps  classAlbatrosTram.tex  classAttributeTypeCorrectness.eps  classAttributeTypeCorrectness.tex  classBigTram.eps  classBigTram.tex  classDomainTests.eps  classDomainTests.tex  classExporter.tex  classHalteStation.eps  classHalteStation.tex  classInterfaceExport.eps  classInterfaceExport.tex  classMetroNet.tex  classMetroNetGenerator.tex  classMetronetStation.eps  (+254 more)
Exporter/: AdvancedExport.cpp  AdvancedExport.h  Exporter.cpp  Exporter.h  InterfaceExport.cpp  InterfaceExport.h  SimpleExport.cpp  SimpleExport.h
Exporter/Metronet/: MetronetFileLogger.cpp  MetronetFileLogger.h  MetronetLogger.cpp  MetronetLogger.h
Exporter/Spoor/: SpoorFileLogger.cpp  SpoorFileLogger.h  SpoorLogger.cpp  SpoorLogger.h
Exporter/Station/: StationFileLogger.cpp  StationFileLogger.h  StationSpoor.cpp  StationSpoor.h
Exporter/Tram/: TramFileLogger.cpp  TramFileLogger.h  TramLogger.cpp  TramLogger.h
MetroNet/: MetroNet.cpp  MetroNet.h
MetroNetGenerator/: MetroNetGenerator.cpp  MetroNetGenerator.h
ParseXML/: ParseMetroNet.cpp  ParseMetroNet.h  ParseSpoor.cpp  ParseSpoor.h  ParseStation.cpp  ParseStation.h  ParseTram.cpp  ParseTram.h  ParseXML.cpp  ParseXML.h
Spoor/: Spoor.cpp  Spoor.h
Station/: Schema.cpp  Schema.h  Station.cpp  Station.h
Stations/: HalteStation.cpp  HalteStation.h  MetronetStation.cpp  MetronetStation.h  Station.cpp  Station.h
TestFiles/: AttributeTypeCorrectness.cpp  DomainTestSuite.cpp  TagChecker.cpp  ValidAdvancedExport.cpp  ValidAmountAttributesStation.cpp  ValidAmountAttributesTram.cpp  ValidAttributesSpoor.cpp  ValidAttributesStation.cpp  ValidAttributesTram.cpp  ValidExport.cpp  ValidMetroNetTest.cpp  ValidSimpleExport.cpp  test1.cpp  test2.cpp  test3.cpp
TestInputXML/: .Uitleg.txt  metronet10.xml  metronet11.xml  metronet13.xml  metronet14.xml  metronet15.xml  metronet16.xml  metronet17.xml  metronet18.xml  metronet19.xml  metronet2.xml  metronet20.xml  metronet21.xml  metronet22.xml  metronet23.xml  metronet24.xml  metronet3.xml  metronet4.xml  metronet5.xml  metronet6.xml  metronet7.xml  metronet8.xml  metronet9.xml
TestInputXML/InValidFile/: metroNet0.xml  metroNet1.xml  metroNet2.xml  metroNet3.xml
TestInputXML/InValidMetroNet/: metroNet0.xml  metroNet1.xml  metroNet2.xml  metroNet3.xml  metroNetErr0.txt  metroNetErr1.txt  metroNetErr2.txt  metroNetErr3.txt
TestInputXML/InValidSpoor/: metroNet0.xml  metroNet1.xml  metroNet3.xml  metroNetErr0.txt  metroNetErr1.txt
TestInputXML/InValidSpoorAttributes/: metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/InValidSporen/: metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/InValidStation/: InValidStation1.xml  InValidStation2.xml  metroNet0.xml  metroNet1.xml  metroNet2.xml  metroNet3.xml  metroNetErr1.txt
TestInputXML/InValidStationAttributes/: metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/InValidTram/: metroNet0.xml  metroNet1.xml  metroNet2.xml  metroNet3.xml  metroNetErr0.txt  metroNetErr1.txt  metroNetErr2.txt
TestInputXML/InValidTramAttributes/: metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/InValidXmlTags/: metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/ValidMetroNet/: metroNet2.xml
TestInputXML/ValidStation/: ValidStation1.xml  ValidStation2.xml  ValidStation3.xml  metroNet0.xml  metroNet1.xml  metroNet2.xml
TestInputXML/ValidTram/: metroNet0.xml  (+2 more)
TestOutput/: metroNetTestSpecs.txt
TinyXML/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
Tram/: Tram.cpp  Tram.h
Trams/: AlbatrosTram.cpp  AlbatrosTram.h  BigTram.cpp  BigTram.h  PCCTram.cpp  PCCTram.h  StadslijnerTram.cpp  StadslijnerTram.h  Tram.cpp  Tram.h
Utils/: utils.cpp  utils.h
XMLexamples/: .Uitleg.txt  metronet13.xml  metronet15.xml  metronet17.xml  metronet18.xml  metronet19.xml  metronet21.xml  metronet23.xml  metronet4.xml  metronet5.xml  metronet8.xml  metronet9.xml  script.py
generateMetroNet/: MetroNetGenerator.cpp  MetroNetGenerator.h
(+96 files in other folders)
